Impact Section : Alignment and clone fix

--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ p {
   font-size: 17px;
   line-height: 1.8;
   text-align: left;
-  margin-left: 200px;
+  /*margin-left: 200px;*/
   font-weight: 300;
 }
 
@@ -418,6 +418,34 @@ h5 {
   width: 100%;
   object-fit: cover;
   scale: 1.1;
+}
+.impact{
+  font-size: 25.5px;
+  line-height: 0.9;
+  margin-top: 0px;
+  font-family: "Futura Now Headline", "Lucida Sans", Tahoma, sans-serif;
+  font-weight: 700;
+  margin-bottom: 16px;
+}
+.para{
+  margin-bottom: 32px;
+  font-size: 16px;
+  letter-spacing: 0.01em;
+  font-family:"Helvetica Now Text", "Lucida Sans", Tahoma, sans-serif;
+}
+.howwe{
+  font-family: "ABC Social Mono", "Lucida Sans", Tahoma, nonospaced;
+  font-weight: 500;
+  -webkit-text-decoration: none;
+  text-decoration: none;
+  position: relative;
+  padding-bottom: 8px;
+  text-transform: uppercase;
+  letter-spacing: 0.095em;
+  font-size: 12px;
+  color: black;
+  text-decoration: underline;
+  line-height: 1.2;
 }
 
 @media (max-width: 600px) {
